# agentic-ai-reference-architectures

./: .env.example  README.md  SECURITY.md  llms.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
architectures/: ai-workforce.md  customer-service-agent.md  enterprise-knowledge-assistant.md  operations-center.md  sales-copilot.md
examples/: run_research_agent.py
src/agentic_ref/: __init__.py  agent.py  evaluation.py  hitl.py  memory.py  models.py  observability.py  planning.py  tools.py
tests/: test_agent.py
