[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-ref"
version = "0.1.0"
description = "Reference architecture for production AI agents: planning, tools, memory, evaluation, HITL, observability."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Santiago Santa María Morales" }]
keywords = ["agentic-ai", "ai-agents", "llm", "generative-ai", "vertex-ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []  # core runs on the standard library only

[project.optional-dependencies]
vertex = ["google-cloud-aiplatform>=1.60"]
dev = ["pytest>=8", "ruff>=0.6"]

[project.urls]
Homepage = "https://santismm.com"
Repository = "https://github.com/santismm/agentic-ai-reference-architectures"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.pytest.ini_options]
pythonpath = ["src"]
